# mavkit

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  flake.nix
.beads/: issues.jsonl
.github/workflows/: ci.yml  publish-python.yml  publish.yml
docs/: design.md
examples/: connect_tcp.rs  connect_udp.rs  list_modes.rs  mission_upload_download.rs  monitor_statustext.rs  params_roundtrip.rs  raw_messages.rs  set_mode_and_arm.rs  tlog_record.rs
mavkit-macros/src/: lib.rs
mavkit-python/: Cargo.toml  README.md  pyproject.toml  stubtest-allowlist.txt
mavkit-python/examples/: connect_tcp.py  connect_udp.py  list_modes.py  mission_upload_download.py  params_roundtrip.py  params_write.py  raw_messages.py  set_mode_and_arm.py  tlog_record.py
mavkit-python/mavkit/: __init__.py  __init__.pyi
mavkit-python/src/: error.rs  ftp.rs  geo.rs  info.rs  lib.rs  link.rs  macros.rs  mission.rs  modes.rs  params.rs  raw_message.rs  state.rs  support.rs  telemetry.rs  tlog.rs  vehicle.rs
mavkit-python/src/guided/: copter.rs  mod.rs  plane.rs  rover.rs  session.rs  sub.rs  test_support.rs  tests.rs
mavkit-python/src/mission/: functions.rs  mod.rs  model.rs
mavkit-python/src/mission/commands/: common.rs  condition.rs  dispatch.rs  do_cmd.rs  mod.rs  nav.rs  raw.rs
mavkit-python/src/telemetry/: common.rs  messages.rs  metrics.rs  mod.rs  namespaces.rs  sensor_health.rs  status_text.rs  values.rs
mavkit-python/src/vehicle/: api.rs  common.rs  mod.rs  plan_handles.rs  progress.rs  raw.rs  states.rs  stored_plans.rs  test_support.rs  tests.rs
mavkit-python/tests/: test_ardupilot.py  test_enums.py  test_error.py  test_examples.py  test_marshaling.py  test_mission.py  test_params.py  test_tlog.py  test_vehicle_api.py
mavkit-python/tests_typing/: typing_async_flows.py  typing_package_root.py
scripts/: check_tag_version.py  generate_sim_param_fixtures.py  resolve_wasm_bindgen_version.py  run_sitl_tests.py  run_wasm_sitl_tests.py  wait_tcp.py  wait_udp_telemetry.py  ws_tcp_proxy.py
src/: ble_transport.rs  byte_connection.rs  command.rs  config.rs  error.rs  event_loop.rs  fence.rs  ftp.rs  geo.rs  lib.rs  modes.rs  observation.rs  operation.rs  protocol_scope.rs  rally.rs  raw.rs  runtime.rs  shared_state.rs  state.rs  stored_plan.rs  stream.rs  stream_connection.rs  support.rs  test_support.rs  time.rs  types.rs  vehicle.rs
src/ardupilot/: calibration.rs  copter.rs  domain.rs  handle.rs  mag_cal.rs  mod.rs  plane.rs  rover.rs  sub.rs  tests.rs  types.rs  vehicle_family.rs
src/ardupilot/guided/: copter.rs  mod.rs  plane.rs  rover.rs  session.rs  sub.rs
src/event_loop/: commands.rs  dispatcher.rs  init.rs  mission.rs  mod.rs  params.rs  state_update.rs  tests.rs
src/event_loop/mission/: clear.rs  convert.rs  download.rs  mod.rs  protocol.rs  set_current.rs  upload.rs
src/event_loop/state_update/: flight.rs  gps.rs  mod.rs  radio.rs  status_text.rs  system.rs  tests.rs  vehicle.rs
src/fence/: handle.rs  mod.rs  plan.rs  state.rs  wire.rs
src/info/: domain.rs  types.rs
src/mission/: domain.rs  handle.rs  mod.rs  operations.rs  runner.rs  test_support.rs  transfer.rs  types.rs  validation.rs  wire.rs
src/modes/: catalog.rs  domain.rs  handle.rs  mod.rs  tests.rs  types.rs
src/observation/: backing.rs  subscription.rs  tests.rs  typed.rs
src/params/: domain.rs  file.rs  handle.rs  mod.rs  operations.rs  types.rs
src/raw/: types.rs
src/sim/: api.rs  dynamics.rs  mission.rs  mod.rs  params.rs  power.rs  protocol.rs  runtime.rs  state.rs  transport.rs
src/telemetry/: handles.rs  messages.rs  status_text.rs  types.rs  values.rs
src/tlog/: file.rs  mod.rs  writer.rs
src/vehicle/: accessors.rs  actions.rs  lifecycle.rs  mod.rs  rc_override.rs
tests/: demo.rs  ftp.rs  sitl.rs  sitl_commands.rs  sitl_mission.rs  sitl_modes.rs  sitl_params.rs  sitl_roundtrip.rs  sitl_support.rs  typescript_export.rs  wasm_byte_connection.rs  wasm_sim.rs  wasm_sitl.rs
tests/common/: backend.rs  clock.rs  commands.rs  fixtures.rs  identity.rs  mission.rs  mod.rs  modes.rs  params.rs  raw.rs  runtime.rs  support.rs  target.rs  telemetry.rs  wait.rs
tests/sitl/: ftp.rs
(+24 files in other folders)
