[workspace]
members = [".", "mavkit-python", "mavkit-macros"]

[workspace.lints.rust]
# Intentionally narrow S01 baseline: start with high-signal rules the workspace can carry.
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
redundant_clone = "deny"
clone_on_copy = "deny"
needless_collect = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[package]
name = "mavkit"
version = "0.5.0"
edition = "2024"
rust-version = "1.87"
description = "Async MAVLink SDK for vehicle control, missions, and parameters"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AveryanAlex/mavkit"
homepage = "https://github.com/AveryanAlex/mavkit"
documentation = "https://docs.rs/mavkit"
keywords = ["mavlink", "uav", "drone", "ardupilot"]
categories = ["aerospace", "asynchronous", "api-bindings"]

[lints]
workspace = true

[features]
default = ["udp", "serial", "ardupilot"]
udp = ["mavlink/transport-udp"]
tcp = ["mavlink/transport-tcp"]
serial = ["mavlink/transport-direct-serial"]
ardupilot = []
stream = ["async-trait"]
byte-connection = ["async-trait"]
sim = ["async-trait", "dep:serde_json"]
wasm = ["byte-connection"]
tlog = ["tokio/fs", "tokio/io-util"]

[dependencies]
mavkit-macros = { path = "mavkit-macros" }
mavlink = { git = "https://github.com/AveryanAlex/rust-mavlink.git", rev = "a35d19c2708806f623406b5bfcd13a633416795a", package = "mavlink", default-features = false, features = ["std", "tokio", "serde", "format-generated-code", "mav2-message-extensions", "dialect-all"] }
tokio = { version = "1", default-features = false, features = ["sync", "macros"] }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
thiserror = "2"
num-traits = "0.2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
serde_json = { version = "1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", default-features = false, features = ["sync", "time", "rt", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"
web-time = "1"

[dev-dependencies]
tempfile = "3"
async-trait = "0.1"
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
js-sys = "0.3"
tokio = { version = "1", default-features = false, features = ["rt", "macros", "sync", "time"] }
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["BinaryType", "CloseEvent", "Event", "MessageEvent", "WebSocket"] }

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "tlog_parse"
required-features = ["tlog"]

[[example]]
name = "connect_tcp"
required-features = ["tcp"]

[[example]]
name = "tlog_record"
required-features = ["tlog", "udp"]

[[bin]]
name = "export_sim_params"
path = "src/bin/export_sim_params.rs"
required-features = ["sim"]
