[package]
name = "mavkit-python"
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[lints]
workspace = true

[features]
test-support = []

[lib]
name = "mavkit"
crate-type = ["cdylib"]

[dependencies]
mavkit = { path = "..", features = ["tlog", "tcp"] }
serde_json = "1"
pyo3 = "0.28"
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["sync", "time", "rt", "rt-multi-thread"] }
tokio-stream = "0.1"
mavlink = { git = "https://github.com/AveryanAlex/rust-mavlink.git", rev = "a35d19c2708806f623406b5bfcd13a633416795a", package = "mavlink", default-features = false, features = ["std", "serde", "format-generated-code", "mav2-message-extensions", "dialect-all"] }
num-traits = "0.2"
